Fix undesirable flicker effect caused by the html template display.

--- a/modules/cstl-admin/grunt/src/less/main.less
+++ b/modules/cstl-admin/grunt/src/less/main.less
@@ -21,8 +21,8 @@ html{
   height:100%;
 }
 
-[ng\:cloak], [ng-cloak], .ng-cloak {
- display: none !important;
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
 li>a {
     cursor: pointer;
